# demandpilot

./: .env.example  .gitignore  CHANGELOG.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  main.py  schemas.py
backend/app/services/: analytics.py  data_service.py  dataset_registry.py  demo_data.py  forecasting.py
backend/tests/: test_api.py  test_dataset_registry.py  test_forecasting.py
data/: sample_sales.csv
docs/: ARCHITECTURE.md  DATA_FORMAT.md  ROADMAP.md
frontend/: index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  mockData.ts  styles.css  types.ts
frontend/src/pages/: ControlTower.tsx  LandingPage.tsx
scripts/: generate_demo_data.py
